<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context="com.example.bjtuembedded.assigment1.MainActivity"
    tools:showIn="@layout/app_bar_side_navigation">

    <ImageView
        android:id="@+id/book"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="1dp"
        android:clickable="true"
        android:contentDescription="@string/booking_trainers"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/training"
        app:layout_constraintEnd_toStartOf="@+id/calendarView"
        app:layout_constraintStart_toStartOf="@+id/news"
        app:layout_constraintTop_toBottomOf="@+id/news"
        app:srcCompat="@drawable/trainers" />

    <ImageView
        android:id="@+id/news"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:contentDescription="@string/news"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/news"/>

    <ImageView
        android:id="@+id/training"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="1dp"
        android:clickable="true"
        android:contentDescription="@string/actual_class"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calendarView"
        app:layout_constraintStart_toStartOf="@+id/news"
        app:layout_constraintTop_toBottomOf="@+id/book"
        app:srcCompat="@drawable/classe" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/training"
        app:layout_constraintTop_toBottomOf="@+id/news" />

</android.support.constraint.ConstraintLayout>
